@@ -1,11 +1,8 @@
 package com.goddess.base.gc;
 
 /**
- * TODO
- * -XX:-UseCompressedOops -XX:+UseConcMarkSweepGC
  *
- * java -cp .\sa-jdi.jar sun.jvm.hotspot.HSDB
- *
+
  * @author qinshengke
  * @since 2020/7/19 20:21
  **/
